<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_btn"
        android:text="@string/message_a_dur_e_long" />

    <Button
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_btn"
        android:text="@string/message_a_dur_e_court" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="clip_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/t1"
            android:layout_width="120sp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/style_et"
            android:ems="10"
            android:hint="@string/dur_e_s"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="1dp" />

        <Button
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:background="@drawable/style_btn"
            android:text="@string/message_personnalis" />

    </LinearLayout>

    <Button
        android:id="@+id/b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_btn"
        android:text="@string/notification" />

    <Button
        android:id="@+id/b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_btn"
        android:text="@string/alert_a_une_seule_option" />

    <Button
        android:id="@+id/b6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_btn"
        android:text="@string/alert_a_deux_options" />

    <Button
        android:id="@+id/b7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_btn"
        android:text="@string/message_a_trois_option" />
</LinearLayout>